--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-snowfall": "^2.4.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
