Remove private tg

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smart-car-ui",
-  "private": true,
+  "author": "Terraegg",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
